force-app/main/default/objects/leaseworks__Obligation__c/leaseworks__Obligation__c.object-meta.xml
<CustomObject>
    <description>Reporting only. Track all your Lease-related obligations, be it one-time or recurring (system-generated schedule). Examples: annual financial statements, scheduled contributions. Use &quot;Period&quot; and &quot;Start/End Date&quot; for automatic scheduling. Note: no billing/invoicing, it&apos;s for tracking only.</description>
    <label>Obligation</label>
    <nameField>
        <label>Obligation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obligations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>