force-app/main/default/objects/leaseworks__Obligation__c/fields/FS_Obligation_Required__c.field-meta.xml
<CustomField>
    <fullName>FS_Obligation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FS Obligation Required</label>
    <type>Checkbox</type>
</CustomField>