force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Due_Date__c</fullName>
    <formula>IF(ISBLANK( leaseworks__Next_Event_Due_Date__c ), leaseworks__Onetime_Event_Due_Date__c, leaseworks__Next_Event_Due_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>