force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Narrative__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Narrative__c</fullName>
    <label>Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>