force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Next_Event_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Next_Event_Due_Date__c</fullName>
    <inlineHelpText>The earliest Due Date of all related Obligation Schedule records that are still Open</inlineHelpText>
    <label>Next Due Date</label>
    <summarizedField>leaseworks__Obligations_Schedule__c.leaseworks__Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Obligations_Schedule__c.leaseworks__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Obligations_Schedule__c.leaseworks__Obligation__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>