force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Obligation_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Obligation_Amount__c</fullName>
    <inlineHelpText>The Amount of the Obligation, dollar amount associated with this obligation for reporting purposes</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>