force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Obligation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Obligation_End_Date__c</fullName>
    <inlineHelpText>The End Date of the Obligation. If periodicity was set, then the system will generate Obligation Schedule records from Start to End Date</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>