force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Onetime_Event_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Onetime_Event_Due_Date__c</fullName>
    <description>Used for Obligations with Periodicy Type = &#39;Onetime&#39;</description>
    <inlineHelpText>For One Time obligations that have no periodicity, enter when the obligation is Due (optional)</inlineHelpText>
    <label>One Time Due Date</label>
    <type>Date</type>
</CustomField>