force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Operator_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Obligations</relationshipLabel>
    <relationshipName>Obligations_New</relationshipName>
    <type>Lookup</type>
</CustomField>