force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Paid_Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Paid_Comment__c</fullName>
    <inlineHelpText>Free text comment about payment</inlineHelpText>
    <label>Paid Comment</label>
    <type>TextArea</type>
</CustomField>