force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Periodicity_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Periodicity_Type__c</fullName>
    <inlineHelpText>For the recurrent obligations with the Obligation Schedule, select the Period Unit that the system will use for the calculation of the Obligation Schedule</inlineHelpText>
    <label>Period Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day(s)</fullName>
            </value>
            <value>
                <fullName>Month(s)</fullName>
            </value>
            <value>
                <fullName>Year(s)</fullName>
            </value>
            <value>
                <fullName>Onetime</fullName>
                <label>One Time</label>
            </value>
            <value>
                <fullName>Bi-Annual</fullName>
                <isActive>false</isActive>
                <label>Bi-Annual</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Quarter(s)</fullName>
                <isActive>false</isActive>
                <label>Quarter(s)</label>
            </value>
            <value>
                <fullName>Week(s)</fullName>
                <isActive>false</isActive>
                <label>Week(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>