force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Remaining_Amount__c</fullName>
    <formula>leaseworks__Obligation_Amount__c -  leaseworks__Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>