force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Responsible_Department__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Responsible_Department__c</fullName>
    <label>Responsible Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracts Management</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Finance/ Credit</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>