force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sub_Type__c</fullName>
    <description>Used for Lessor Obligations Type page layout.</description>
    <inlineHelpText>Obligation Sub Type, used for the reporting purposes and can be customised</inlineHelpText>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Agreement</fullName>
            </value>
            <value>
                <fullName>Servicing Agreement</fullName>
            </value>
            <value>
                <fullName>Aviation Authority Document</fullName>
            </value>
            <value>
                <fullName>Contribution</fullName>
            </value>
            <value>
                <fullName>EOL Payment</fullName>
            </value>
            <value>
                <fullName>Financial Statement</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>