force-app/main/default/objects/leaseworks__Obligation__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <inlineHelpText>Obligation Type, used for the reporting purposes and can be customised</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lessee Obligation</fullName>
            </value>
            <value>
                <fullName>Lessor Obligation</fullName>
            </value>
            <value>
                <fullName>Consignee</fullName>
                <label>Consignee Obligation</label>
            </value>
            <value>
                <fullName>Consignor</fullName>
                <label>Consignor Obligation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>