force-app/main/default/objects/leaseworks__Obligation__c/fields/Obligation__c.field-meta.xml
<CustomField>
    <fullName>Obligation__c</fullName>
    <label>Obligation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>