force-app/main/default/objects/leaseworks__Obligation__c/validationRules/leaseworks__StartAndEndDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__StartAndEndDateRequired</fullName>
    <active>true</active>
    <description>Obligation Start Date and End Date are required to generate an Obligation Schedule, except for ‘One-time’ obligations.</description>
    <errorConditionFormula>AND(
 NOT( ISPICKVAL(leaseworks__Periodicity_Type__c, &quot;Onetime&quot;)),
  OR( ISBLANK( leaseworks__Obligation_Start_Date__c ) ,
      ISBLANK( leaseworks__Obligation_End_Date__c ) ) 
)</errorConditionFormula>
    <errorMessage>Obligation Start Date and End Date are required to generate an Obligation Schedule, except for ‘One-time’ obligations. Please provide these dates to proceed.</errorMessage>
</ValidationRule>