force-app/main/default/objects/leaseworks__Obligation__c/validationRules/leaseworks__StartDateCannotBeLaterThanEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__StartDateCannotBeLaterThanEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Obligation_End_Date__c &lt; leaseworks__Obligation_Start_Date__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Obligation_Start_Date__c</errorDisplayField>
    <errorMessage>Obligation Start Date should be less then Obligation End Date</errorMessage>
</ValidationRule>