force-app/main/default/objects/leaseworks__Obligation__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Type__c</columns>
    <columns>leaseworks__Sub_Type__c</columns>
    <columns>leaseworks__Description__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>leaseworks__Assigned_To__c</columns>
    <columns>leaseworks__Obligation_Start_Date__c</columns>
    <columns>leaseworks__Obligation_End_Date__c</columns>
    <columns>leaseworks__Periodicity_Type__c</columns>
    <columns>leaseworks__Periodicity_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>